--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
       <select id="model-select" title="Select AI Model">
         <option value="llama3-8b-8192" selected>MIA 2.5o</option>
       </select>
-      <button id="change-key-btn" title="Change API Key">
-        <i class="fas fa-key"></i>
-      </button>
+      <span class="api-status">Connected to MIA AI</span>
+
     </div>
   </div>
 
