--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="header">
-    <h1>MIA AI (Prototype)</h1>
+    <h1>MIA AI (Prototype 2)</h1>
     <div class="controls">
       <button id="theme-toggle-btn" title="Toggle Theme">
         <i class="fas fa-moon"></i>
@@ -27,13 +27,13 @@
     <div class="chat-container">
       <div class="chat-window">
         <div class="chat-messages" id="response-area">
-          <p class="placeholder-text">Watch MIA AI work its magic—your truth-checked response will appear here...</p>
+          <p class="placeholder-text">Watch MIA AI work its magic—your response will appear here...</p>
         </div>
 
         <div class="input-bar">
           <textarea id="prompt-input" placeholder="Enter your myth/fake content here..."></textarea>
           <button id="submit-btn" title="Send Prompt">
-            <i class="fas fa-paper-plane"></i> Generate
+            <i class="fas fa-paper-plane"></i> Send
           </button>
           <button id="clear-btn" title="Clear">
             <i class="fas fa-eraser"></i> Clear
@@ -55,10 +55,11 @@
     <h6><a href="#">Contact Us</a></h6>
   </section>
 
-  <p class="powered-text">Powered by: Project De Fake Bot</p>
+  <p class="powered-text">Powered by: Project MIA AI</p>
 
   <!-- Load main script -->
   <script src="app.js"></script>
 </body>
 </html>
+
 
